@@ -9,6 +9,8 @@ opsi-script (4.12.4.36) stable; urgency=low
   * oswebservice: retrieveJSONObject: retry on other communication mode only on 400- bad request result
   * oswebservice: retrieveJSONObjectByHttpPost: retry on other communication mode only on 400- bad request result
   * oswebservice: getOpsiModules: Legal notice to our license protection
+  * osfunclin: linIsUefi: implemented uefi test for linux
+  * boolean function runningOnUefi now also supports linux
 
 
 -- d.oertel <d.oertel@uib.de> Wed, 19 Jan 2022 15:00
